Fixing text overflow issue, r+ by @bdahl

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -167,13 +167,9 @@ article {
 	background-color: $backgroundLightWarm;
 }
 .feature-header {
-	display: flex;
-	flex-direction: row;
-  min-width: 0;
+	position: relative;
 }
 .feature-title {
-	flex: 1;
-	@extend truncate-text;
 	@extend h5;
 	padding-top: 0;
 	margin-bottom: 0;
@@ -290,6 +286,12 @@ article {
 	@media (min-resolution: 2dppx) {
 		background-image: url('images/github@2x.png');
 	}
+}
+
+.feature-status {
+	position: absolute;
+	right: 0;
+	top: 0;
 }
 
 .feature-status ul {
